# lang

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  effects.org  makefile
examples/: +  closures (Copy 1).lang  closures.lang  closures.magic  ex0.magic  example0.lang  state.lang  state.magic  tmp.c  tmp.magic
src/: +  _ast.hpp  alias.hpp  ast.cpp  ast.hpp  closures.hpp  context.cpp  context.hpp  continuations.hpp  cps.hpp  crc64.cpp  crc64.hpp  error.cpp  error.hpp  ir.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  registry.cpp  registry.hpp  ssa.hpp  token.cpp  token.hpp  transformations.cpp  transformations.hpp  types.hpp  utils.cpp  utils.hpp
src/_ignore/: ssa.hpp
src/ast/: +  ast.hpp  ast_control_flow.cpp  ast_control_flow.hpp  ast_declaration.cpp  ast_declaration.hpp  ast_function.cpp  ast_function.hpp  ast_kind.cpp  ast_kind.hpp  ast_literals.cpp  ast_literals.hpp  ast_manager.cpp  ast_manager.hpp  ast_operations.cpp  ast_operations.hpp  ast_pointer.cpp  ast_pointer.hpp  ast_program_point.cpp  ast_program_point.hpp  ast_types.cpp  ast_types.hpp  utils.cpp  utils.hpp
src/compiler/: compiler.cpp  compiler.hpp  file_manager.cpp  file_manager.hpp  header.h  header.hpp  symbol_table.cpp  symbol_table.hpp  transpiler.cpp  transpiler.hpp
src/context/: context.cpp  context.hpp
src/continuations/: bubbling.cpp  bubbling.hpp  closure.cpp  closure.hpp  closures.cpp  closures.hpp  continuations.cpp  continuations.hpp  glue.cpp  handler.cpp  handler.hpp  stack.cpp  test.cpp  test1.cpp  tlsf_utils.h
src/glue/: a.out  allocator.cpp  allocator.hpp  context.hpp  glue.h  stack.hpp
src/glue/a.out.dSYM/Contents/Resources/DWARF/: a.out
src/lib/: set.hpp  table.hpp  utils.hpp
src/parser/: +  parser.cpp  parser.hpp
src/stackframe/: stackframe.cpp  stackframe.hpp
tests/: CMakeLists.txt  closure-conversion-tests.cpp  lexer-tests.cpp  parser-tests.cpp  tests.hpp  token-tests.cpp
tests/compiler/: symbol_table.cpp
tests/context/: context.cpp
tests/continuations/: bubbling.cpp  closures.cpp  continuations.cpp  handler.cpp
tests/parser/: parser.cpp
tests/stackframe/: stackframe.cpp
